--- a/openapi/shukanTalentJoho.yaml
+++ b/openapi/shukanTalentJoho.yaml
@@ -16,14 +16,14 @@ paths:
       description: １週間においてのタレントごとの情報を返す
       parameters:
         - in: query
-          name: targetNentsuki
+          name: nentsuki
           required: true
           schema:
             type: integer
             maximum : 210012
             minimum : 199001
         - in: query
-          name:  targetShu
+          name:  shu
           required: true
           schema:
             type: integer
