--- a/openapi/yearMonthWeekStartEnd.yaml
+++ b/openapi/yearMonthWeekStartEnd.yaml
@@ -16,14 +16,14 @@ paths:
       description: 年月に対応する週の開始終了日付の情報を返す
       parameters:
         - in: query
-          name: targetNentsuki
+          name: nentsuki
           required: true
           schema:
             type: integer
             maximum : 210012
             minimum : 199001
         - in: query
-          name:  targetShu
+          name:  shu
           required: true
           schema:
             type: integer
