--- a/openapi/shukanTalentJoho.yaml
+++ b/openapi/shukanTalentJoho.yaml
@@ -7,10 +7,10 @@ servers:
   - url: https://localhost:8080
     description: 週間タレント別情報
 paths:
-  /ShukanTalentJoho:
+  /shukanTalentJoho:
     get:
       tags:
-        - ShukanTalentJoho
+        - shukanTalentJoho
       operationId: getShukanTalentJoho
       summary: １週間においてのタレントごとの情報を返す
       description: １週間においてのタレントごとの情報を返す
