--- a/openapi/talentShukanShutsuenJoho.yaml
+++ b/openapi/talentShukanShutsuenJoho.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.0
 info:
   title: タレント週間出演情報検索
-  description: タレントにおいての１週間ごとの情報をする
+  description: タレントにおいての１週間ごとの情報を返す
   version: 1.0.0
 servers:
-  - url: https://localhost:8080
+  - url: https://localhost:8082
     description: タレント週間出演情報検索
 paths:
   /talentShukanShutsuenJoho:
