--- a/openapi/kbnMaster.yaml
+++ b/openapi/kbnMaster.yaml
@@ -27,12 +27,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/kbnMaster'      
+                $ref: '#/components/schemas/kbnMasterInfo'      
 components:
   schemas:
-    kbnMaster:
+    kbnMasterInfo:
       description: 区分マスタDTO
       type: object
       properties:
-         items:
-          $ref: "../../TalentSearchCommon/Tables/mKbnGenre.yaml#/components/schemas/mKbnGenre"
+        kbnMaster:
+          description: 区分マスタDTO
+          type: array
+          items:
+            $ref: "../../TalentSearchCommon/Tables/mKbnGenre.yaml#/components/schemas/mKbnGenre"
