BE「番組登録・更新BFF」の作成

--- a/openapi/programTorokuKoshin.yaml
+++ b/openapi/programTorokuKoshin.yaml
@@ -26,13 +26,15 @@ paths:
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/programTorokuKoshin'      
+                $ref: '#/components/schemas/programTorokuKoshin'
 components:
   schemas:
     programTorokuKoshin:
       description: 登録または更新した番組マスタ情報
       type: object
       properties:
+        mProgram:
+          description: 番組マスタDTO
+          type: array
           items:
             $ref: "../../TalentSearchCommon/Tables/mProgram.yaml#/components/schemas/mProgram"
