BE「タレントマスタ検索」の作成

--- a/openapi/talentMaster.yaml
+++ b/openapi/talentMaster.yaml
@@ -27,10 +27,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/mTalent'
+                $ref: '#/components/schemas/TalentList'
 components:
   schemas:
-    mTalent:
+    TalentList:
       description: タレントマスタDTOの情報
       type: object
       properties:
