--- a/openapi/talentRef.yaml
+++ b/openapi/talentRef.yaml
@@ -35,14 +35,15 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                items:
-                  $ref: '#/components/schemas/talentInfo'
+               $ref: '#/components/schemas/TalentList'
 components:
   schemas:
-    talentInfo:
-      description: タレントマスタ情報DTO
+    TalentList:
+      description: タレントマスタDTOの情報
       type: object
       properties:
-        items:
-          $ref: "../../TalentSearchCommon/Tables/mTalent.yaml#/components/schemas/mTalent"
+        mTalent:
+          description: タレントマスタDTO
+          type: array
+          items:
+           $ref: "../../TalentSearchCommon/Tables/mTalent.yaml#/components/schemas/mTalent"
