--- a/openapi/nentsukiShuKanriRef.yaml
+++ b/openapi/nentsukiShuKanriRef.yaml
@@ -7,11 +7,11 @@ servers:
   - url: https://localhost:8082
     description: 年月週管理参照検索
 paths:
-  /nentsukiShuKanrRef:
+  /nentsukiShuKanriRef:
     get:
       tags:
-        - nentsukiShuKanrRef
-      operationId: getNentsukiShuKanrRef
+        - nentsukiShuKanriRef
+      operationId: getNentsukiShuKanriRef
       summary: 年月、週によって年月週管理情報を返す
       description: 年月、週によって年月週管理情報を返す
       parameters:
