--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 
-spring.datasource.url=jdbc:mysql://localhost/kadaiDB_202305
-spring.datasource.username=fukuta
-spring.datasource.password=yuki1008
+#spring.datasource.url=jdbc:mysql://localhost/kadaiDB_202305
+#spring.datasource.username=fukuta
+#spring.datasource.password=yuki1008
+spring.datasource.url=jdbc:postgresql://db.szdcftaezxmhxjxqdeyi.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Yuki1008!!!
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
