--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-
-#spring.datasource.url=jdbc:mysql://localhost/kadaiDB_202305
-#spring.datasource.username=fukuta
+# MySQLの古い設定（コメントアウトされています）
+#spring.datasource.url=jdbc:mysql://localhost/kadaiDB_2025
+#spring.datasource.username=yuki1008
 #spring.datasource.password=yuki1008
-spring.datasource.url=jdbc:postgresql://db.szdcftaezxmhxjxqdeyi.supabase.co:5432/postgres
-spring.datasource.username=postgres
+
+# PostgreSQLデータベース接続設定 (Supabase Session Pooler)
+spring.datasource.url=jdbc:postgresql://aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.szdcftaezxmhxjxqdeyi
 spring.datasource.password=Yuki1008!!!
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA (Hibernate) 設定
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# MyBatis設定
+mybatis.mapper-locations=classpath:com/user/mapper/*.xml
+mybatis.type-aliases-package=com.user.model.response
