--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,15 @@ spring.datasource.username=postgres.szdcftaezxmhxjxqdeyi
 spring.datasource.password=Yuki1008!!!
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# HikariCP 設定の修正
+# SupabaseのPool Size (15) に基づき、最適な接続数に調整します。
+# ここでは、少し余裕を持たせて12を設定します。これにより、同時に12個のDB接続が可能です。
+# これにより、MaxClientsInSessionModeエラーの回避と、適切なパフォーマンスが期待できます。
+spring.datasource.hikari.maximum-pool-size=12
+# アイドル状態の最小接続数も設定することをお勧めします。これにより、接続の再利用が効率的になります。
+# 例えば、最大数の半分程度に設定することが一般的です。
+spring.datasource.hikari.minimum-idle=6
+
 # JPA (Hibernate) 設定
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
