--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # PostgreSQLデータベース接続設定 (Supabase Session Pooler)
 spring.datasource.url=jdbc:postgresql://aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres
 spring.datasource.username=postgres.szdcftaezxmhxjxqdeyi
-spring.datasource.password=Yuki1008!!!!!
+spring.datasource.password=Yuki1008!!!!
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # HikariCP 設定の修正
